# hw305-svm-random-forest

./: README.md  hw305.ipynb  pyproject.toml
